# vibe-working

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  create-icon.js  package-lock.json  package.json
.github/workflows/: release.yml
src/: chat.js  dialogs.js  index.html  llm-settings.js  main.js  notes.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: llm.rs  main.rs
